fix broken layout

--- a/core-bundle/assets/styles/template-studio/layout.pcss
+++ b/core-bundle/assets/styles/template-studio/layout.pcss
@@ -14,7 +14,7 @@
     overflow: hidden;
 
     display: grid;
-    grid-template-areas: "tree tabs info";
+    grid-template-areas: "nav tabs info";
     grid-template-columns: auto 1fr min-content;
     position: relative;
 
